Logos fixed to two raws. Title moved upward.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
             <!-- EXPERIENCE -->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-6">EXPERIENCE</h2>
+                    <h2 class="mb-6">EXPERIENCES</h2>
+                    <div class="h2">Work experiences</div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Game developing and testing</h3>
@@ -155,6 +156,7 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-6">EDUCATION</h2>
+                    <div class="h2">Education and schools</div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Bachelor of Engineering in ICT</h3>
@@ -185,16 +187,14 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-6">WORKING&nbsp;KNOWLEDGE&nbsp;OF</h2>
-                    <div class="h3">Working knowledge of programming Languages & Tools</div>
+                    <h2 class="mb-6">SKISLLS&TOOLS</h2>
+                    <div class="h2">Skills & Tools</div>
                     <div>
                         <img src="assets/icons/python_icon.png" class="logos" alt="python">
                         <img src="assets/icons/cplus_icon.png" class="logos" alt="C++">
                         <img src="assets/icons/c%23_icon.png" class="logos" alt="C#">
                         <img src="assets/icons/html5_icon.png" class="logos" alt="HTML">
                         <img src="assets/icons/css_icon.png" class="logos" alt="CSS">
-                    </div>
-                    <div>
                         <img src="assets/icons/javascript_icon.png" class="logos" alt="Javascript">
                         <img src="assets/icons/java_icon.png" class="logos" alt="Java">
                         <img src="assets/icons/mysql_icon2.png" class="logos" alt="MySql">
@@ -205,8 +205,13 @@
                         <img src="assets/icons/vscode_icon.png" class="logos" alt="VSCode">
                         <img src="assets/icons/jetbrains_icon.png" class="logos" alt="JetBrains">
                         <img src="assets/icons/arduino_icon.png" class="logos" alt="arduino IDE">
-                        <img src="assets/icons/github_icon.png" class="logos" alt="Git">
+                        <img src="assets/icons/github_icon.png" class="logos" alt="GitHub">
+                        <img src="assets/icons/ms365_icon.png" class="logos" alt="ms365">
                         <img src="assets/icons/aws_icon.png" class="logos" alt="AWS">
+                        <img src="assets/icons/unity_icon.png" class="logos" alt="Unity">
+                        <img src="assets/icons/macOs_icon.png" class="logos" alt="macOs">
+                        <img src="assets/icons/windows_icon.png" class="logos" alt="Windows">
+                        <img src="assets/icons/linux_icon.png" class="logos" alt="Linux">
                     </div>
                     <!-- UNUSED SECTION
                     <ul class="list-inline dev-icons">
@@ -257,7 +262,7 @@
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-6">Interests</h2>
+                    <h2 class="mb-6">INTERESTS</h2>
                     <div class="h3">INTERESTS & HOBBIES</div>
                     <div>
                         As a perpetual student of software/web development, I embark on thrilling adventures abroad whenever I can (because debugging code isn't quite the same as exploring ancient ruins!).
@@ -277,6 +282,7 @@
             <section class="resume-section" id="projects">
                 <div class="Project examples" style="flex-shrink: initial">
                     <h2 class="mb-6">PROJECTS</h2>
+                    <div class="h2">Example projects</div>
                     <!-- PROJECT element-->
                     <div class="container">
                         <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="30000" data-bs-pause="hover" style="width: auto">
