--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <div class="h1">Skills & Tools</div>
                     <div>
                         <img src="assets/icons/python_icon.png" class="logos" alt="python">
-                        <img src="assets/icons/cplus_icon.png" class="logos" alt="C++">
+                        <img src="assets/icons/cplus_icon.png" class="logos" alt="Cpp">
                         <img src="assets/icons/c%23_icon.png" class="logos" alt="C#">
                         <img src="assets/icons/html5_icon.png" class="logos" alt="HTML">
                         <img src="assets/icons/css_icon.png" class="logos" alt="CSS">
@@ -229,23 +229,23 @@
                         </tr>
                         <tr>
                             <td>PYTHON</td>
-                            <td>3 courses and MTA 98-381, and personal projects</td>
+                            <td>MTA 98-381, data analyzing and machine learning (LSTM & CNN), Picture to art program...</td>
                         </tr>
                         <tr>
-                            <td>C++ / C</td>
-                            <td>3 courses and OOP course, and personal projects</td>
+                            <td>Cpp</td>
+                            <td>Airport simulation, Searching and Sorting algorithms, Reservation system...</td>
                         </tr>
                         <tr>
                             <td>Database</td>
-                            <td>MySql, Bigdata Apache Spark, Pandas</td>
+                            <td>Sql, Sqlite, Apache Spark...</td>
                         </tr>
                         <tr>
                             <td>HTML, JS, CSS</td>
-                            <td>Basic web sites, responsive design, API fetch, charts</td>
+                            <td>Web sites, responsive web design, API, charts(bootstrap)</td>
                         </tr>
                         <tr>
-                            <td>CISCO NET. ACADEMY</td>
-                            <td>CCNA ITN 1</td>
+                            <td>SQL / SQLite</td>
+                            <td>REST API with Sqlite, JavaScript and Docker</td>
                         </tr>
                         <tr>
                             <td>Unity & C#</td>
@@ -253,7 +253,7 @@
                         </tr>
                         <tr>
                             <td>Photoshop & InDesign</td>
-                            <td>Photo retouching and advertise creation</td>
+                            <td>Photo retouching, advertise creation, catalogue...</td>
                         </tr>
                     </table>
                 </div>
