JS file fixed more readable

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </h1>
                     <p>ICT engineer, software developer and embedded systems</p>
                     <div>
-                        <!-- Typing text (changing all the time / J.Script)-->
+                        <!-- Typing text (changing all the time / typed.js)-->
                         <h3><br><span id="typed"></span></h3>
                     </div>
                     <!-- Presentation -->
