Linkedin link updated, CV updated

--- a/index.html
+++ b/index.html
@@ -63,17 +63,19 @@
                         <a href="mailto:leona.suzuki@tuni.fi">leona.suzuki@tuni.fi</a>
                     </div>
                     <div class="lead mb-1">
-                        <p>I am currently pursuing a degree in IT Engineering at Tampere University of Applied Sciences and have successfully completed Sasky's Software Developer training.
-                            With 15 years of entrepreneurial experience in the service sector, I have developed a wide range of versatile skills.</p>
-                        <p>I have a proven track record of delivering projects on time, both in team and individual settings. My commitment to thorough job completion,
-                            coupled with my ability to collaborate effectively, allows me to consistently meet customer needs while aligning with company strategies.</p>
-                        <p>My entrepreneurial background has strengthened my ability to handle exceptions and effectively prioritize tasks, allowing me to maintain a broader perspective.</p>
+                        <p>
+                            I’m currently studying IT Engineering at Tampere University of Applied Sciences and have already completed Software Developer training at Sasky.
+                            With 15 years of experience as an entrepreneur in the service industry, I’ve picked up a wide range of valuable skills.
+                            I have a solid track record of getting projects done on time, whether I’m working solo or in a team.
+                            I’m dedicated to seeing things through and always strive to meet customer needs while staying in line with company goals.
+                            My background as an entrepreneur has also taught me how to handle challenges and prioritize tasks effectively, helping me keep a big-picture view.
+                        </p>
                     </div>
                     <!-- Personal information, sosial media, CV, github -->
                     <div class="social-icons">
-                        <a class="social-icon" href="mailto:leona.suzuki@tuni.fi"><i class="fas fa-paper-plane"></i></a>
+                        <a class="social-icon" href="mailto:leona.suzuki@tuni.fi"><i class="fa-solid fa-envelope"></i></a>
                         <a class="social-icon" href="https://github.com/LeoSuzu" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://www.linkedin.com/in/leo-suzuki-60b25759/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/leo-suzuki-60b25759" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
                         <a class="social-icon" href="assets/CV/cv_LeoSuzu.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-file-lines"></i></a>
                         <a class="social-icon" href="assets/CV/cv_LeoSuzu.pdf" download><i class="fa-solid fa-file-arrow-down"></i></a>
                         <a class="social-icon" href="tel:+358440122110"><i class="fa-solid fa-mobile-screen-button"></i></a>
