--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <!-- Personal information, sosial media, CV, github -->
                     <div class="social-icons">
                         <a class="social-icon" href="mailto:leona.suzuki@tuni.fi"><i class="fa-solid fa-envelope"></i></a>
-                        <a class="social-icon" href="https://github.com/LeoSuzu" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/LeoSuzu" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
                         <a class="social-icon" href="https://www.linkedin.com/in/leo-suzuki-60b25759" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
                         <a class="social-icon" href="assets/CV/cv_LeoSuzu.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-file-lines"></i></a>
                         <a class="social-icon" href="assets/CV/cv_LeoSuzu.pdf" download><i class="fa-solid fa-file-arrow-down"></i></a>
