--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>My personal CV page</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (new free version)-->
-        <link rel="stylesheet" href="assets/fontawesome-free-6.4.0-web/css/all.min.css">
+        <link rel="stylesheet" href="assets/fontawesome-free-6.4.0-web/css/all.css">
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
