Linkedin link updated, CV updated

--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
                     <div class="h1">Work experiences</div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">DevOps Engineer</h3>
+                            <div class="subheading mb-3">Finn Teollisuuspalvelut<a href="https://finntepa.fi">Beiz Oy</a></div>
+                                <ul class="list-unstyled">
+                                    <li>&#8211; Developed Excel WorkList, Offer Calculation, and CuttingList sheets with automated synchronization using VBA code for internal company use.</li>
+                                    <li>&#8211; Created a DXF file reader to calculate total or detailed line lengths for G-Weike laser cutter, streamlining offer calculations and improving efficiency.</li>
+                                </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">05/2024 - 08/2024</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Game developing and testing</h3>
                             <!--
                             <a href="https://lolapanda.com/about-beiz/">Beiz Oy</a>
