Linkedin link updated, CV updated

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">DevOps Engineer</h3>
                             <div class="subheading mb-3">Finn Teollisuuspalvelut<a href="https://finntepa.fi">Beiz Oy</a></div>
-                                <ul class="list-unstyled">
+                                <ul class="list-styled">
                                     <li>&#8211; Developed Excel WorkList, Offer Calculation, and CuttingList sheets with automated synchronization using VBA code for internal company use.</li>
                                     <li>&#8211; Created a DXF file reader to calculate total or detailed line lengths for G-Weike laser cutter, streamlining offer calculations and improving efficiency.</li>
                                 </ul>
