Linkedin link updated, CV updated

--- a/index.html
+++ b/index.html
@@ -88,31 +88,51 @@
                 <div class="resume-section-content">
                     <h2 class="mb-6">EXPERIENCES</h2>
                     <div class="h1">Work experiences</div>
+                    <!-- Experience elements 1 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">DevOps Engineer</h3>
-                            <div class="subheading mb-3">Finn Teollisuuspalvelut<a href="https://finntepa.fi">Beiz Oy</a></div>
-                                <ul class="list-styled">
-                                    <li>&#8211; Developed Excel WorkList, Offer Calculation, and CuttingList sheets with automated synchronization using VBA code for internal company use.</li>
-                                    <li>&#8211; Created a DXF file reader to calculate total or detailed line lengths for G-Weike laser cutter, streamlining offer calculations and improving efficiency.</li>
-                                </ul>
+                            <div class="subheading mb-3">
+                                Finn Teollisuuspalvelut Oy
+                                <a href="https://finntepa.fi" target="_blank" rel="noopener noreferrer">Finn teollisuuspalvelut Oy</a>
+                            </div>
+                            <ul class="list-styled">
+                                <li>&ndash; Developed Excel WorkList, Offer Calculation, and CuttingList sheets with automated synchronization using VBA code for internal company use.</li>
+                                <li>&ndash; Created a DXF file reader to calculate total or detailed line lengths for G-Weike laser cutter, streamlining offer calculations and improving efficiency.</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">05/2024 - 08/2024</span></div>
                     </div>
+                    <!-- Experience elements 2 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Game developing and testing</h3>
-                            <!--
-                            <a href="https://lolapanda.com/about-beiz/">Beiz Oy</a>
-                            -->
-                            <div class="subheading mb-3">Beiz Oy</div>
-                            <p>
-                                After conducting extensive testing of the company's game libraries in Japanese, English, and Finnish,
-                                 I collaborated with my colleague to develop the game 'Lola's Fruit Sudoku' using the Unity game engine and C#.
-                            </p>
+                            <h3 class="mb-0">Game Developer, Game Tester & Bug Reporter</h3>
+                            <div class="subheading mb-3">
+                                Beiz Oy
+                                <a href="https://lolapanda.com/about-beiz" target="_blank" rel="noopener noreferrer">Beiz Oy</a>
+                            </div>
+                            <ul class="list-styled">
+                                <li>&ndash; Tested game libraries in Finnish, English, and Japanese.</li>
+                                <li>&ndash; Collaborated with a team to develop the game Lola's Fruit Sudoku using Unity.</li>
+                            </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">3/2021 - 12/2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">03/2021 - 12/2021</span></div>
                     </div>
+                    <!-- Experience elements 3 -->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Web Developer</h3>
+                            <div class="subheading mb-3">
+                                Oy Brunakärrs Energi Ab
+                            </div>
+                            <ul class="list-styled">
+                                <li>&ndash; Established a legal company specializing in energy solutions, where I managed website development and CRM.</li>
+                                <li>&ndash; Designed a user-friendly customer management system to facilitate effortless customer registration and relationship management.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">11/2020 - 01/2021</span></div>
+                    </div>
+                    <!-- Experience elements 4 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Website and CRM</h3>
@@ -126,41 +146,45 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">CEO & entrepreneur</h3>
-                            <div class="subheading mb-3">Oy Findaco Ltd</div>
-                            <table>
-                                <tr>
-                                    <th>Task</th>
-                                    <th>Description</th>
-                                </tr>
-                                <tr>
-                                    <td>CRM</td>
-                                    <td>Customer Relationship Management</td>
-                                </tr>
-                                <tr>
-                                    <td>Website</td>
-                                    <td>Creating and maintaining websites</td>
-                                </tr>
-                                <tr>
-                                    <td>Design and implementation of restaurant management system</td>
-                                    <td>Development of waiter and kitchen staff workstation</td>
-                                </tr>
-                                <tr>
-                                    <td>Programming and training for POS devices</td>
-                                    <td>Developing and training for wireless Point of Sale (POS) devices, including Lightspeed Canada</td>
-                                </tr>
-                                <tr>
-                                    <td>Marketing</td>
-                                    <td>Google, Facebook, Instagram, paper, etc.</td>
-                                </tr>
-                                <tr>
-                                    <td>HR management</td>
-                                    <td>Managing human resources</td>
-                                </tr>
-                            </table>
-
+                            <h3 class="mb-0">Entrepreuner / CEO</h3>
+                            <div class="subheading mb-3">
+                                Oy Findaco Ltd
+                            </div>
+                            <ul class="list-styled">
+                                <li>
+                                    <strong>Leadership and Management:</strong>
+                                    <ul>
+                                        <li>&ndash; Served as CEO and owner, leading the overall strategy and vision for the company.</li>
+                                        <li>&ndash; Managed recruitment, training, and company accounting.</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <strong>Brand Development:</strong>
+                                    <ul>
+                                        <li>&ndash; Successfully built and established the brand.</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <strong>Facility Management:</strong>
+                                    <ul>
+                                        <li>&ndash; Oversaw programming and maintenance of POS devices.</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <strong>Customer Management:</strong>
+                                    <ul>
+                                        <li>&ndash; Developed a customer management system to streamline customer registration and relationship management.</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <strong>Marketing and Entrepreneurship:</strong>
+                                    <ul>
+                                        <li>&ndash; Led marketing efforts and managed various entrepreneurial responsibilities.</li>
+                                    </ul>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">5/2004 - 7/2019</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">05/2004 - 07/2019</span></div>
                     </div>
                 </div>
             </section>
