--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <hr class="m-0" />
             <!-- Education-->
             <section class="resume-section" id="education">
-                <div class="resume-section-content">
+                <div class="resume-section-content">”
                     <h2 class="mb-6">EDUCATION</h2>
                     <div class="h1">Education and schools</div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
