Linkedin link updated, CV updated

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </style>
     </head>
     <body id="page-top">
-        <!-- Navigation-->
+        <!-- NAVIGATION PANE -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none"></span>
@@ -45,7 +45,7 @@
         </nav>
         <!-- Page Content-->
         <div class="container-fluid p-0">
-            <!-- About-->
+            <!-- ABOUT SECTION -->
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <!-- NAME -->
@@ -83,7 +83,7 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- EXPERIENCE -->
+            <!-- EXPERIENCE SECTION -->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-6">EXPERIENCES</h2>
@@ -97,8 +97,8 @@
                                 <a href="https://finntepa.fi" target="_blank" rel="noopener noreferrer">Finn teollisuuspalvelut Oy</a>
                             </div>
                             <ul class="list-styled">
-                                <li>&ndash; Developed Excel WorkList, Offer Calculation, and CuttingList sheets with automated synchronization using VBA code for internal company use.</li>
-                                <li>&ndash; Created a DXF file reader to calculate total or detailed line lengths for G-Weike laser cutter, streamlining offer calculations and improving efficiency.</li>
+                                <li> Developed Excel WorkList, Offer Calculation, and CuttingList sheets with automated synchronization using VBA code for internal company use.</li>
+                                <li> Created a DXF file reader to calculate total or detailed line lengths for G-Weike laser cutter, streamlining offer calculations and improving efficiency.</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">05/2024 - 08/2024</span></div>
@@ -112,8 +112,8 @@
                                 <a href="https://lolapanda.com/about-beiz" target="_blank" rel="noopener noreferrer">Beiz Oy</a>
                             </div>
                             <ul class="list-styled">
-                                <li>&ndash; Tested game libraries in Finnish, English, and Japanese.</li>
-                                <li>&ndash; Collaborated with a team to develop the game Lola's Fruit Sudoku using Unity.</li>
+                                <li> Tested game libraries in Finnish, English, and Japanese.</li>
+                                <li> Collaborated with a team to develop the game Lola's Fruit Sudoku using Unity.</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">03/2021 - 12/2021</span></div>
@@ -126,8 +126,8 @@
                                 Oy Brunakärrs Energi Ab
                             </div>
                             <ul class="list-styled">
-                                <li>&ndash; Established a legal company specializing in energy solutions, where I managed website development and CRM.</li>
-                                <li>&ndash; Designed a user-friendly customer management system to facilitate effortless customer registration and relationship management.</li>
+                                <li> Established a legal company specializing in energy solutions, where I managed website development and CRM.</li>
+                                <li> Designed a user-friendly customer management system to facilitate effortless customer registration and relationship management.</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">11/2020 - 01/2021</span></div>
@@ -137,52 +137,49 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Website and CRM</h3>
                             <div class="subheading mb-3">Brunakärrs energi Oy</div>
-                            <p>
-                                I established a legal company specializing in energy solutions, where I managed website development and CRM.
-                                Additionally, I designed a user-friendly customer management system to facilitate effortless customer registration and relationship management.
-                            </p>
+                            <ul>
+                                <li>I established a legal company specializing in energy solutions, where I managed website development and CRM.</li>
+                                <li>Additionally, I designed a user-friendly customer management system to facilitate effortless customer registration and relationship management.</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary"> 10/2020 - 1/2021</span></div>
                     </div>
+                    <!-- Experience elements 5 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Entrepreuner / CEO</h3>
-                            <div class="subheading mb-3">
-                                Oy Findaco Ltd
+                            <h3 class="mb-0">Entrepreneur / CEO</h3>
+                            <div class="subheading mb-3">Oy Findaco Ltd</div>
+                            <div class="task-category">
+                                <strong>Leadership and Management:</strong>
+                                <ul class="list-unstyled">
+                                    <li>Served as CEO and owner, leading the overall strategy and vision for the company.</li>
+                                    <li>Managed recruitment, training, and company accounting.</li>
+                                </ul>
                             </div>
-                            <ul class="list-styled">
-                                <li>
-                                    <strong>Leadership and Management:</strong>
-                                    <ul>
-                                        <li>&ndash; Served as CEO and owner, leading the overall strategy and vision for the company.</li>
-                                        <li>&ndash; Managed recruitment, training, and company accounting.</li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <strong>Brand Development:</strong>
-                                    <ul>
-                                        <li>&ndash; Successfully built and established the brand.</li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <strong>Facility Management:</strong>
-                                    <ul>
-                                        <li>&ndash; Oversaw programming and maintenance of POS devices.</li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <strong>Customer Management:</strong>
-                                    <ul>
-                                        <li>&ndash; Developed a customer management system to streamline customer registration and relationship management.</li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <strong>Marketing and Entrepreneurship:</strong>
-                                    <ul>
-                                        <li>&ndash; Led marketing efforts and managed various entrepreneurial responsibilities.</li>
-                                    </ul>
-                                </li>
-                            </ul>
+                            <div class="task-category">
+                                <strong>Brand Development:</strong>
+                                <ul class="list-unstyled">
+                                    <li>Successfully built and established the brand.</li>
+                                </ul>
+                            </div>
+                            <div class="task-category">
+                                <strong>Facility Management:</strong>
+                                <ul class="list-unstyled">
+                                    <li>Oversaw programming and maintenance of POS devices.</li>
+                                </ul>
+                            </div>
+                            <div class="task-category">
+                                <strong>Customer Management:</strong>
+                                <ul class="list-unstyled">
+                                    <li>Developed a customer management system to streamline customer registration and relationship management.</li>
+                                </ul>
+                            </div>
+                            <div class="task-category">
+                                <strong>Marketing and Entrepreneurship:</strong>
+                                <ul class="list-unstyled">
+                                    <li>Led marketing efforts and managed various entrepreneurial responsibilities.</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">05/2004 - 07/2019</span></div>
                     </div>
