--- a/index.html
+++ b/index.html
@@ -135,48 +135,36 @@
                     <!-- Experience elements 4 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Website and CRM</h3>
-                            <div class="subheading mb-3">Brunakärrs energi Oy</div>
-                            <ul>
-                                <li>I established a legal company specializing in energy solutions, where I managed website development and CRM.</li>
-                                <li>Additionally, I designed a user-friendly customer management system to facilitate effortless customer registration and relationship management.</li>
-                            </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"> 10/2020 - 1/2021</span></div>
-                    </div>
-                    <!-- Experience elements 5 -->
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
                             <h3 class="mb-0">Entrepreneur / CEO</h3>
                             <div class="subheading mb-3">Oy Findaco Ltd</div>
                             <div class="task-category">
                                 <strong>Leadership and Management:</strong>
-                                <ul class="list-unstyled">
+                                <ul class="list-styled">
                                     <li>Served as CEO and owner, leading the overall strategy and vision for the company.</li>
                                     <li>Managed recruitment, training, and company accounting.</li>
                                 </ul>
                             </div>
                             <div class="task-category">
                                 <strong>Brand Development:</strong>
-                                <ul class="list-unstyled">
+                                <ul class="list-styled">
                                     <li>Successfully built and established the brand.</li>
                                 </ul>
                             </div>
                             <div class="task-category">
                                 <strong>Facility Management:</strong>
-                                <ul class="list-unstyled">
+                                <ul class="list-styled">
                                     <li>Oversaw programming and maintenance of POS devices.</li>
                                 </ul>
                             </div>
                             <div class="task-category">
                                 <strong>Customer Management:</strong>
-                                <ul class="list-unstyled">
+                                <ul class="list-styled">
                                     <li>Developed a customer management system to streamline customer registration and relationship management.</li>
                                 </ul>
                             </div>
                             <div class="task-category">
                                 <strong>Marketing and Entrepreneurship:</strong>
-                                <ul class="list-unstyled">
+                                <ul class="list-styled">
                                     <li>Led marketing efforts and managed various entrepreneurial responsibilities.</li>
                                 </ul>
                             </div>
